# ide_testbed

./: dev.py  package-lock.json  package.json  rspack.config.js  styles.scss
.devcontainer/: Dockerfile  devcontainer.json
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/frontend/src/contextmenu/: mod.rs
crates/frontend/src/sidebar/: explorer.rs  mod.rs  search.rs
crates/frontend/src/vfs/: mod.rs
crates/frontend/src/workspace/: console.rs  mod.rs
crates/frontend/src/workspace/activity_panel/: editor.rs  mod.rs  simulator.rs  welcome.rs
static/: index.html
