[package]
name = "frontend"
version = "0.1.0"
description = "Web Development"
authors = ["Michael Allwright <contact@allwright.io>"]
license = "Closed"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
chrono = "0.4.24"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
dominator = "0.5.33"
dominator-bulma = { git = "https://github.com/rustifybe/dominator-bulma.git" }
codemirror-sys = { git = "https://github.com/rustifybe/codemirror-sys.git" }
futures = "0.3.26"
futures-signals = "0.3.31"
getrandom = { version = "0.2.8", features = ["js"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-net = { version = "0.2.6", features = ["http", "websocket", "json"] }
js-sys = "0.3.55"
tracing = { version = "0.1.37", default-features = false }
tracing-web = "0.1.2"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter", "std"] }
regex = "1.10.6"
once_cell = "1.19.0"
time = "0.3.35"

wasm-bindgen = "=0.2.91"
wasm-bindgen-futures = "0.4.28"
[dependencies.web-sys]
version = "0.3.55"
features = ["HtmlHtmlElement"]